# daed

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .gitmodules.d.mk  .lintstagedrc.yml  .prettierignore  .prettierrc  .release-please-manifest.json  CHANGELOG.md  CHANGELOGS.md  CODEOWNERS  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  LICENSE.MIT  Makefile  README.md  checkout.sh  codegen.cjs  codegen.ts  codegen.yml  components.json  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.Dockerfile  release-please-config.json  schema.graphql  script.sh  tailwind.config.js  tsconfig.json  turbo.json  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
assets/: Range-52ddcb6a.js  SchemaReference.es-00dad7c1.js  SchemaReference.es-02b6dea5.js  SchemaReference.es-03cbb288.js  SchemaReference.es-04d68d8e.js  SchemaReference.es-0558b498.js  SchemaReference.es-0799cc4e.js  SchemaReference.es-08399e18.js  SchemaReference.es-0a34f6a2.js  SchemaReference.es-0dedf269.js  SchemaReference.es-15116080.js  SchemaReference.es-15b16096.js  SchemaReference.es-16b76536.js  SchemaReference.es-1a2f4b7e.js  SchemaReference.es-1ad68e9b.js  SchemaReference.es-1ed706aa.js  SchemaReference.es-1f097668.js  SchemaReference.es-22168a9e.js  SchemaReference.es-240c99d4.js  SchemaReference.es-2773292c.js  SchemaReference.es-28148560.js  SchemaReference.es-2d405eca.js  SchemaReference.es-2fdde15c.js  (+4451 more)
docs/: build.md  (+2 more)
native/: Cargo.toml  package.json  tauri.conf.json
(+431 files in other folders)
